@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'This is a basic API to develop extensions which connect to different payment transaction gateways.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '0.4.1',
+	'version' => '0.4.2',
 	'dependencies' => 'div2007',
 	'conflicts' => '',
 	'priority' => '',
@@ -28,8 +28,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'CGLcompliance_note' => '',
 	'constraints' => array(
 		'depends' => array(
-			'php' => '5.3.0-5.7.99',
-			'typo3' => '4.5.0-7.7.99',
+			'php' => '5.3.0-7.99.99',
+			'typo3' => '4.5.0-7.99.99',
 			'div2007' => '1.0.3-0.0.0',
 		),
 		'conflicts' => array(
